Added function to reset form on every save action

--- a/project-library/index.html
+++ b/project-library/index.html
@@ -18,5 +18,10 @@
     <input type="date" class="book-prop" id="book-pubDate" placeholder="Published Date" required autovalidate/>
     <button type="button" class="btn">Add book</button>
  </form>
+
+ <!--This section displays the list of books-->
+ <div class="row" id="book-list">
+   
+ </div
 </body>
 <script type="text/javascript" src="./scripts.js"></script>
