Using css variables, changed the styling of some dom elements

--- a/project-library/index.html
+++ b/project-library/index.html
@@ -17,6 +17,8 @@
     <input type="text" class="book-prop" id="book-author" placeholder="Author" required autovalidate/>
     <input type="date" class="book-prop" id="book-pubDate" placeholder="Published Date" required autovalidate/>
     <button type="button" class="btn">Add book</button>
+    <button type="button" class="btn" onclick="hideBookForm()">Done</button>
+    
  </form>
 
  <!--This section displays the list of books-->
