--- a/project-library/index.html
+++ b/project-library/index.html
@@ -16,14 +16,14 @@
     <input type="text" class="book-prop" pattern="\d{1,4}" id="book-numPages"  placeholder="Number Of Pages (digits)" required autovalidate>
     <input type="text" class="book-prop" id="book-author" placeholder="Author" required autovalidate/>
     <input type="date" class="book-prop" id="book-pubDate" placeholder="Published Date" required autovalidate/>
-    <button type="button" class="btn">Add book</button>
-    <button type="button" class="btn" onclick="hideBookForm()">Done</button>
+    <button type="button" id="add-book" class="btn bg-steelblue">Add book</button>
+    <button type="button" id="done-btn" class="btn">Done</button>
     
  </form>
 
  <!--This section displays the list of books-->
  <div class="row" id="book-list">
-   
- </div
+   <ul></ul>
+ </div>
 </body>
 <script type="text/javascript" src="./scripts.js"></script>
